<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_form"
    >
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:textSize="20dp"

                    android:text="@string/create_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                </TextView>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/name_category">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="30"
                        android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/key_category">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/key_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="30"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_margin="10dp">

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                        android:id="@+id/cancel"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/cancel"
                        android:textColorHint="#FFF"
                        android:backgroundTint="#B03A2E"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:layout_marginRight="10dp">
                    </com.google.android.material.button.MaterialButton>


                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                        android:id="@+id/save"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/save"
                        android:textColorHint="#FFF"
                        android:backgroundTint="#1F618D"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:layout_marginLeft="10dp"
                        >
                    </com.google.android.material.button.MaterialButton>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>